@@ -1,3 +1,9 @@
+2008-05-14  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tkPanedWindow.c (PanedWindowProxyCommand)
+	(DisplayPanedWindow): Ensure that a zero width never gets fed to the
+	underlying window system. [Bug 1639824]
+
 2008-05-13  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* library/console.tcl: Support pixel sized font in +/- keybinding.
